# marimo_bias_variance_app

./: .gitignore  README.md  app.py  pyproject.toml  run.sh
docs/: index.html
